# data-structure

./: .gitignore  CMakeLists.txt  README.md  go.mod
1-linear-list/1.1-static-allocation/: static-allocation.cpp
1-linear-list/1.2-dynamic-allocation/: dynamic-allocation.go
1-linear-list/1.3-singly-linked-list/: singly-linked-list.cpp
1-linear-list/1.3-singly-linked-list/homework/: reverse-singly-linked-list.cpp
1-linear-list/1.4-double-linked-list/: double-linked-list.cpp
1-linear-list/1.5-circular-singly-linked-list/: circular-singly-linked-list.cpp
1-linear-list/1.6-circular-double-linked-list/: circular-double-linked-list.cpp
1-linear_list/: linear_list.go
1-linear_list/1.1-static_allocation/: static-allocation.cpp  static-allocation.go
1-linear_list/1.3-linked-list/: linked-list.go  singly-linked-list.cpp
2-sort/1_bubble-sort/: bubble-sort.go
2-sort/2_quick_sort/: quick-sort.go
